Fixed Layout on Mobile

--- a/style.css
+++ b/style.css
@@ -50,9 +50,8 @@
 
 }
 
-.padding 
-{
-	padding: 80px 0px;
+.padding {
+	padding: 2rem 0;
 }
 
 .padding img{
@@ -98,8 +97,10 @@ footer{
 
 @media (max-width:768px)
 {
-	.landing_text h1{
+	.landing-text h1{
 		font-size:300%;
+		font-weight:700;
+	
 	}
 
 
@@ -114,4 +115,7 @@ footer{
 	padding:5%;
 	max-width: 100px;
 }
+
+
+
 }
